<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/welcomeUserTextView"
        style="@style/mediumHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:padding="0dp"
        android:text="@string/welcomeUserTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ordersInfoLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeUserTextView">

        <TextView
            android:id="@+id/remainingOrdersTextView"
            style="@style/smallHeading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/remainingOrdersTextView" />

        <TextView
            android:id="@+id/numberOfOrdersTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/numberOfOrdersTextView"
            android:textColor="@color/yellow"
            android:textSize="@dimen/medium_heading" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/courierInfoLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ordersInfoLinearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/courierInfoTextView"
                style="@style/smallHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/courierInfoTextView" />

            <TextView
                android:id="@+id/courierRatingTextView"
                style="@style/smallHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/courierRatingTextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/addReviewLink"
            style="@style/smallHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="Adauga un review" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ordersListingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courierInfoLinearLayout"
        tools:listitem="@layout/element_user" />

</androidx.constraintlayout.widget.ConstraintLayout>